WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259618
REGRESSION (
266341@main
): mousemove no longer dispatched when UI-side compositing is disabled
https://bugs.webkit.org/show_bug.cgi?id=259618
Summary
REGRESSION (266341@main): mousemove no longer dispatched when UI-side composi...
Wenson Hsieh
Reported
2023-07-28 17:50:54 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-07-28 18:09:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16206
Radar WebKit Bug Importer
Comment 2
2023-07-28 18:14:25 PDT
<
rdar://problem/113060681
>
EWS
Comment 3
2023-07-28 22:49:52 PDT
Committed
266411@main
(4f26424a4687): <
https://commits.webkit.org/266411@main
> Reviewed commits have been landed. Closing PR #16206 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug