Cherry-pick 4f26424a4687. rdar://problem/113060681

REGRESSION (266341@main): mousemove no longer dispatched when UI-side compositing is disabled
    https://bugs.webkit.org/show_bug.cgi?id=259618

    Reviewed by Aditya Keerthi.

    After the changes in 266341@main, when UI-side compositing is disabled, we can end up in a state where mouse events are
    indefinitely queued in the UI process, as the web process never flushes the deferred DidReceiveEvent message for a
    mousemove event that has already been handled. This is because `TiledCoreAnimationDrawingArea::scheduleRenderingUpdate`
    is unimplemented, and so nothing guarantees that we'll eventually send the deferred `DidReceiveEvent` back to the UI
    process.

    Fix this by avoiding the deferred `DidReceiveEvent` if `scheduleRenderingUpdate()` returns `false` (indicating that no
    rendering update is scheduled). In practice, this effectively disables the changes in 266341@main unless we're using a
    remote layer tree drawing area, which is now the default on both macOS Sonoma (in most device models) and iOS 17, which
    enable UI-side compositing.

    Test: MouseEventTests.SendMouseMoveEventStream

    * Source/WebKit/WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::mouseEvent):
    * Tools/TestWebKitAPI/Tests/mac/MouseEventTests.mm:

    Canonical link: https://commits.webkit.org/266411@main
Identifier: 265423.732@safari-7616.1.27.12-branch